Fixed Image Overflow

--- a/airitreats/src/slices/ImageGrid/ImageGrid.module.scss
+++ b/airitreats/src/slices/ImageGrid/ImageGrid.module.scss
@@ -25,10 +25,14 @@
     margin-bottom: 1.5rem;
 }
 
+.imgContainer {
+    position: relative;
+    aspect-ratio: 1/1;
+}
+
 .img {
     width: 100%;
     height: 100%;
-    aspect-ratio: 1/1;
     border-radius: 1rem 1rem 0 0;
 }
 
